--- a/homework/Day_006_HW.ipynb
+++ b/homework/Day_006_HW.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "jbkK8wprdbdY"
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "id": "1mZQSUx_fry7"
    },
@@ -61,15 +61,15 @@
    "outputs": [],
    "source": [
     "#2. 讀取剛剛的npz檔，加入下列array一起存成新的npz檔\n",
-    "np.load('two_array.npz')\n",
+    "a=np.load('two_array.npz')\n",
     "array3 = np.array([[4,5,6], [1,2,3]])\n",
     "with open('three_array.npz', 'wb') as x:\n",
-    "    np.savez(x,array1,array2,array3)"
+    "    np.savez(x,a['arr_0'],a['arr_1'],array3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
